# t212

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  TODO.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
apps/web/: index.html  package-lock.json  package.json
configs/: api_keys.example.toml  finviz_screeners.yaml  holdings.example.yaml  openbb.example.yaml  openbb.lock.json  risk.example.yaml  settings.example.toml  settings.example.yaml  strategy.benchmark.example.yaml  strategy.conservative_dividend.example.yaml  strategy.example.yaml  trading212.example.yaml  universe.example.yaml  watchlist.example.yaml
docs/: README.md  acceptance_checklist.md  agent-coordination.md  architecture.md  assumptions.md  autonomous_investment_workflow.md  codex_extension_prompts.md  dashboard_layout.md  data_sources.md  decision_rules.md  finviz_discovery.md  implementation-roadmap.md  implementation_plan.md  implementation_status.md  isa_notes.md  mvp-gap-analysis.md  openbb_setup.md  openbb_upstream.md  pilot-checklist.md  portfolio_manager.md  roadmap.md  runbook.md  scoring_model.md  thesis_lifecycle.md  trading212_safety.md  workspace_integration.md
scripts/: check_openbb.py  run_api.py  run_backtest.py  run_dashboard.py  run_discovery.py  run_full_pipeline.py  run_ingestion.py  run_portfolio_review.py  run_rebalance_preview.py  run_top10_research.py  smoke_test.py  update_openbb.ps1
src/isa_system/: __init__.py  cli.py  constants.py  logging.py  orchestrator.py  settings.py  smoke_test.py
tests/fixtures/: finviz_elite_garp.html  finviz_hidden_compounders.html  finviz_post_earnings.html  openbb_fundamentals.json  openbb_price_history.json  trading212_instruments.json
tests/integration/: test_api.py  test_api_release_readiness.py  test_audit_api.py  test_broker_api.py  test_command_center_ui.py  test_discovery_api.py  test_enrichment_api.py  test_mvp_guardrails.py  (+16 more)
(+260 files in other folders)
